[metadata]
name = check_docker_container
version = 1.0.2
author = Lukasz Michalski
author_email = lm@zork.pl
description = Nagios/Icinga2 monitoring plugin for checking container state
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlackZork/check_docker_container
project_urls =
    Bug Tracker = https://github.com/BlackZork/check_docker_container/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

#scripts = check_docker_container.py

package_dir =
    = src
packages = find:

install_requires =
    nagiosplugin

[options.extras_require]
dev =
    pylint

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check_docker_container = check_docker_container.check_docker_container:main